--- a/Test-OutPut/emailable-report.html
+++ b/Test-OutPut/emailable-report.html
@@ -9,12 +9,18 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,153</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">20,805</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestCases.TC_001_validating_ProductsPage_Functionality</td><td><a href="#m0">TestHomePage</a></td><td rowspan="1">1769686136297</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m1">backpack_isDisplayed</a></td><td rowspan="1">1769686136304</td><td rowspan="1">0</td></tr><tr class="passedodd"><td rowspan="1">TestCases.TC_002_Validating_LoginFunctionality</td><td><a href="#m2">TestLogin</a></td><td rowspan="1">1769686139723</td><td rowspan="1">13343</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestCases.TC_001_validating_ProductsPage_Functionality</td><td><a href="#m0">TestHomePage</a></td><td rowspan="1">1769688213929</td><td rowspan="1">10</td></tr><tr class="failedodd"><td rowspan="1">TestCases.TC_002_Validating_LoginFunctionality</td><td><a href="#m1">TestLogin</a></td><td rowspan="1">1769688217363</td><td rowspan="1">13342</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.TC_001_validating_ProductsPage_Functionality</td><td><a href="#m2">backpack_isDisplayed</a></td><td rowspan="1">1769688213943</td><td rowspan="1">4</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">TestCases.TC_001_validating_ProductsPage_Functionality#TestHomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestCases.TC_001_validating_ProductsPage_Functionality#backpack_isDisplayed</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestCases.TC_002_Validating_LoginFunctionality#TestLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestCases.TC_001_validating_ProductsPage_Functionality#TestHomePage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
+	at TestCases.TC_001_validating_ProductsPage_Functionality.TestHomePage(TC_001_validating_ProductsPage_Functionality.java:29)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestCases.TC_002_Validating_LoginFunctionality#TestLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Products] but found [true]
+	at TestCases.TC_002_Validating_LoginFunctionality.TestLogin(TC_002_Validating_LoginFunctionality.java:40)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestCases.TC_001_validating_ProductsPage_Functionality#backpack_isDisplayed</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
