--- a/Test-OutPut/index.html
+++ b/Test-OutPut/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,7 +92,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">3 methods, 2 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestCases.TC_001_validating_ProductsPage_Functionality" class="method navigator-link" hash-for-method="TestHomePage">TestHomePage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestCases.TC_002_Validating_LoginFunctionality" class="method navigator-link" hash-for-method="TestLogin">TestLogin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,16 +120,6 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="TestCases.TC_001_validating_ProductsPage_Functionality" class="method navigator-link" hash-for-method="TestHomePage">TestHomePage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="TestCases.TC_002_Validating_LoginFunctionality" class="method navigator-link" hash-for-method="TestLogin">TestLogin</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="TestCases.TC_001_validating_ProductsPage_Functionality" class="method navigator-link" hash-for-method="backpack_isDisplayed">backpack_isDisplayed</a> <!-- method navigator-link -->
@@ -128,9 +137,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">TestCases.TC_001_validating_ProductsPage_Functionality</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -139,20 +148,18 @@
                   <a name="TestHomePage">
                   </a> <!-- TestHomePage -->
                   <span class="method-name">TestHomePage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="backpack_isDisplayed">
-                  </a> <!-- backpack_isDisplayed -->
-                  <span class="method-name">backpack_isDisplayed</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
+	at TestCases.TC_001_validating_ProductsPage_Functionality.TestHomePage(TC_001_validating_ProductsPage_Functionality.java:29)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
+          </div> <!-- suite-Suite-class-failed -->
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">TestCases.TC_002_Validating_LoginFunctionality</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -161,6 +168,26 @@
                   <a name="TestLogin">
                   </a> <!-- TestLogin -->
                   <span class="method-name">TestLogin</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [Products] but found [true]
+	at TestCases.TC_002_Validating_LoginFunctionality.TestLogin(TC_002_Validating_LoginFunctionality.java:40)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 32 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">TestCases.TC_001_validating_ProductsPage_Functionality</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="backpack_isDisplayed">
+                  </a> <!-- backpack_isDisplayed -->
+                  <span class="method-name">backpack_isDisplayed</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,15 +257,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestLogin')
 data.setCell(0, 2, 'TestCases.TC_002_Validating_LoginFunctionality')
-data.setCell(0, 3, 13343);
+data.setCell(0, 3, 13342);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TestHomePage')
 data.setCell(1, 2, 'TestCases.TC_001_validating_ProductsPage_Functionality')
-data.setCell(1, 3, 3);
+data.setCell(1, 3, 10);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'backpack_isDisplayed')
 data.setCell(2, 2, 'TestCases.TC_001_validating_ProductsPage_Functionality')
-data.setCell(2, 3, 0);
+data.setCell(2, 3, 4);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -275,31 +302,35 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">TestHomePage</span>
-                <span class="method-start">4154 ms</span>
+                <span class="method-start">3850 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">backpack_isDisplayed</span>
+                <span class="method-start">3864 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">4161 ms</span>
+                <span class="method-start">3870 ms</span>
               </div> <!-- configuration-class after -->
-              <div class="test-method">
-                <span class="method-name">backpack_isDisplayed</span>
-                <span class="method-start">4161 ms</span>
-              </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestCases.TC_002_Validating_LoginFunctionality</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">4316 ms</span>
+                <span class="method-start">4058 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">TestLogin</span>
-                <span class="method-start">7580 ms</span>
+                <span class="method-start">7284 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">20923 ms</span>
+                <span class="method-start">20626 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
